--- a/pythonDjangoProject/food/templates/food/detail.html
+++ b/pythonDjangoProject/food/templates/food/detail.html
@@ -15,7 +15,45 @@
 <body>
     <div class="container">
         <div class="row">
-            <h3 class="text-center">{{msg}}</h3>
+            <table class="table">
+                <tr>
+                    <td width="30%" class="text-center" rowspan="8">
+                        <img src="http://www.menupan.com{{poster}}" style="width:290px;height: 200px;">
+                    </td>
+                    <td colspan="2">
+                        <h3>{{name}} &nbsp;<span style="color: orange;">{{score}}</span></h3>
+                    </td>
+                </tr>
+                <tr>
+                    <td class="text-center" width="15%">주소</td>
+                    <td width="55%">{{address}}</td>
+                </tr>
+                <tr>
+                    <td class="text-center" width="15%">전화</td>
+                    <td width="55%">{{phone}}</td>
+                </tr>
+                <tr>
+                    <td class="text-center" width="15%">음식종류</td>
+                    <td width="55%">{{type}}</td>
+                </tr>
+                <tr>
+                    <td class="text-center" width="15%">영업시간</td>
+                    <td width="55%">{{time}}</td>
+                </tr>
+                <tr>
+                    <td class="text-center" width="15%">테마</td>
+                    <td width="55%">{{theme}}</td>
+                </tr>
+                <tr>
+                    <td class="text-center" width="15%">좌석</td>
+                    <td width="55%">{{seat}}</td>
+                </tr>
+                <tr>
+                    <td colspan="2" class="text-right">
+                        <a href="/food/" class="btn btn-sm btn-danger">목록</a>
+                    </td>
+                </tr>
+            </table>
         </div>
     </div>
 </body>
