--- a/PythonDjangoReactProject/web/templates/main/main.html
+++ b/PythonDjangoReactProject/web/templates/main/main.html
@@ -3,6 +3,13 @@
 <html>
 <head>
 <title>Gravity</title>
+<style type="text/css">
+  a.link:hover{
+    cursor:pointer
+  }
+</style>
+<script src="https://unpkg.com/vue@3"></script>
+<script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 <link href="{% static 'layout/styles/layout.css' %}" rel="stylesheet" type="text/css" media="all">
@@ -27,9 +34,9 @@
       </li>
       <li><a class="drop" href="#">레시피</a>
         <ul>
-          <li><a href="pages/gallery.html">레시피</a></li>
-          <li><a href="pages/full-width.html">쉐프</a></li>
-          <li><a href="pages/full-width.html">레시피 검색</a></li>
+          <li><a href="/web/recipe/list">레시피</a></li>
+          <li><a href="/web/recipe/chef">쉐프</a></li>
+          <li><a href="/web/recipe/find">레시피 검색</a></li>
         </ul>
       </li>
       <li><a class="drop" href="#">스토어</a>
